Adding a button that loads the saved tasks and improving the logic of the functions that need to be verified by a window.confirm.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <main class="flex-container">
         <div class="top-section">
             <section id="input-container" class="flex-container">
-                <input class="input" type="text" id="texto-tarefa" placeholder="Adicione uma tarefa" />
+                <div class="input-and-load">
+                    <input class="input" type="text" id="texto-tarefa" placeholder="Adicione uma tarefa" />
+                    <button id="load-button" class="button is-info is-light">Load</button>
+                </div>
+                
 
                 <div class="add-save">
                     <button class="button is-primary is-light" id="criar-tarefa">
